<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AdminPannel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" android:background="@drawable/backgrd">

    <Button
        android:id="@+id/btn_ManageBook"
        android:layout_width="280dp"
        android:layout_height="85dp"
        android:layout_marginBottom="36dp"
        android:text="@string/manage_books"
        android:textSize="16sp"
        app:backgroundTint="#540022"
        app:layout_constraintBottom_toTopOf="@+id/btn_ManageMovies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_ManageMovies"
        android:layout_width="280dp"
        android:layout_height="85dp"
        android:layout_marginBottom="36dp"
        android:text="@string/btn_ManageMovies"
        android:textSize="16sp"
        app:backgroundTint="#540022"
        app:layout_constraintBottom_toTopOf="@+id/btn_ManageTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_ManageTV"
        android:layout_width="280dp"
        android:layout_height="85dp"
        android:layout_marginBottom="100dp"
        android:text="@string/btn_ManageTV"
        android:textSize="16sp"
        app:backgroundTint="#540022"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="416dp"
        android:layout_height="60dp"
        android:background="#540022"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="466dp"
        android:layout_height="232dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_ManageBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/adminpanellogo" />

</androidx.constraintlayout.widget.ConstraintLayout>